--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -48,12 +48,18 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-<!--
 ### Sesión 26 Cpp-review-dune 29/01/2022
 
 <iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
-  src="https://diode.zone/videos/embed/eM6offwkEcSCGci2FC8v83?title=0&warningTitle=0&peertubeLink=0"
+  src="https://diode.zone/videos/embed/s1H9hP2cP5yWUPY91vgiRN?title=0&warningTitle=0&peertubeLink=0"
   frameborder="0" allowfullscreen>
 </iframe>
- -->
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/mt4eS5N7tHEe9ENeLHNsCH?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 27 Cpp-review-dune 30/01/2022
