--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -63,3 +63,11 @@ sidebar: auto
 </iframe>
 
 ### Sesión 27 Cpp-review-dune 30/01/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/gdsKpmRY8pTv1tQ4uUbLvu?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 28 Cpp-review-dune 05/02/2022
