--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -71,3 +71,11 @@ sidebar: auto
 </iframe>
 
 ### Sesión 28 Cpp-review-dune 05/02/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/71N781XonzSfaoAbLxm2U6?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 29 Cpp-review-dune 06/02/2022
