--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -79,3 +79,11 @@ sidebar: auto
 </iframe>
 
 ### Sesión 29 Cpp-review-dune 06/02/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/dRKTCdBZftbBJiV8YdaFGh?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 30 Cpp-review-dune 12/02/2022
