--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -95,3 +95,11 @@ sidebar: auto
 </iframe>
 
 ### Sesión 31 Cpp-review-dune 13/02/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/8hZFxbWZpggbRmMf2CXei9?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 32 Cpp-review-dune 19/02/2022
