--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -13,6 +13,7 @@ sidebar: auto
 </iframe>
 
 [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-15.pdf)
+[Pad](https://yopad.eu/p/2022-01-15-dune-365days)
 
 ### Sesión 22 Cpp-review-dune 16/01/2022
 
@@ -23,6 +24,7 @@ sidebar: auto
 </iframe>
 
 [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-16.pdf)
+[Pad](https://yopad.eu/p/2022-01-16-dune-365days)
 
 ### Sesión 23 Cpp-review-dune 20/01/2022
 
@@ -40,6 +42,9 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
+[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-22.pdf)
+[Pad](https://yopad.eu/p/2022-01-22-dune-365days)
+
 ### Sesión 25 Cpp-review-dune 23/01/2022
 
 <iframe width="610" height="350"
@@ -47,6 +52,9 @@ sidebar: auto
   src="https://diode.zone/videos/embed/mgJd6BNDvUt7FqZDAfGG1U?title=0&warningTitle=0&peertubeLink=0"
   frameborder="0" allowfullscreen>
 </iframe>
+
+[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-23.pdf)
+[Pad](https://yopad.eu/p/2022-01-23-dune-365days)
 
 ### Sesión 26 Cpp-review-dune 29/01/2022
 
@@ -62,6 +70,9 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
+[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-29.pdf)
+[Pad](https://yopad.eu/p/2022-01-29-dune-365days)
+
 ### Sesión 27 Cpp-review-dune 30/01/2022
 
 <iframe width="610" height="350"
@@ -69,6 +80,9 @@ sidebar: auto
   src="https://diode.zone/videos/embed/gdsKpmRY8pTv1tQ4uUbLvu?title=0&warningTitle=0&peertubeLink=0"
   frameborder="0" allowfullscreen>
 </iframe>
+
+[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-30.pdf)
+[Pad](https://yopad.eu/p/2022-01-30-dune-365days)
 
 ### Sesión 28 Cpp-review-dune 05/02/2022
 
@@ -78,6 +92,9 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
+[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-05.pdf)
+[Pad](https://yopad.eu/p/2022-02-05-dune-365days)
+
 ### Sesión 29 Cpp-review-dune 06/02/2022
 
 <iframe width="610" height="350"
@@ -85,6 +102,9 @@ sidebar: auto
   src="https://diode.zone/videos/embed/dRKTCdBZftbBJiV8YdaFGh?title=0&warningTitle=0&peertubeLink=0"
   frameborder="0" allowfullscreen>
 </iframe>
+
+[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-06.pdf)
+[Pad](https://yopad.eu/p/2022-02-06-365days-365days)
 
 ### Sesión 30 Cpp-review-dune 12/02/2022
 
@@ -94,6 +114,9 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
+[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-12.pdf)
+[Pad](https://yopad.eu/p/2022-02-12-dune-365days)
+
 ### Sesión 31 Cpp-review-dune 13/02/2022
 
 <iframe width="610" height="350"
@@ -102,4 +125,18 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
+[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-13.pdf)
+[Pad](https://yopad.eu/p/2022-02-13-dune-365days)
+
 ### Sesión 32 Cpp-review-dune 19/02/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/8xHzXjzDbAeyDeShbwuS8G?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-13.pdf)
+[Pad](https://yopad.eu/p/2022-02-19-dune-365days)
+
+### Sesión 33 Cpp-review-dune 20/02/2022
