--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -12,8 +12,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-15.pdf)
-[Pad](https://yopad.eu/p/2022-01-15-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-15.pdf)
+- [Pad](https://yopad.eu/p/2022-01-15-dune-365days)
 
 ### Sesión 22 Cpp-review-dune 16/01/2022
 
@@ -23,8 +23,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-16.pdf)
-[Pad](https://yopad.eu/p/2022-01-16-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-16.pdf)
+- [Pad](https://yopad.eu/p/2022-01-16-dune-365days)
 
 ### Sesión 23 Cpp-review-dune 20/01/2022
 
@@ -42,8 +42,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-22.pdf)
-[Pad](https://yopad.eu/p/2022-01-22-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-22.pdf)
+- [Pad](https://yopad.eu/p/2022-01-22-dune-365days)
 
 ### Sesión 25 Cpp-review-dune 23/01/2022
 
@@ -53,8 +53,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-23.pdf)
-[Pad](https://yopad.eu/p/2022-01-23-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-23.pdf)
+- [Pad](https://yopad.eu/p/2022-01-23-dune-365days)
 
 ### Sesión 26 Cpp-review-dune 29/01/2022
 
@@ -70,8 +70,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-29.pdf)
-[Pad](https://yopad.eu/p/2022-01-29-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-29.pdf)
+- [Pad](https://yopad.eu/p/2022-01-29-dune-365days)
 
 ### Sesión 27 Cpp-review-dune 30/01/2022
 
@@ -81,8 +81,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-30.pdf)
-[Pad](https://yopad.eu/p/2022-01-30-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-01-30.pdf)
+- [Pad](https://yopad.eu/p/2022-01-30-dune-365days)
 
 ### Sesión 28 Cpp-review-dune 05/02/2022
 
@@ -92,8 +92,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-05.pdf)
-[Pad](https://yopad.eu/p/2022-02-05-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-05.pdf)
+- [Pad](https://yopad.eu/p/2022-02-05-365days)
 
 ### Sesión 29 Cpp-review-dune 06/02/2022
 
@@ -103,8 +103,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-06.pdf)
-[Pad](https://yopad.eu/p/2022-02-06-365days-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-06.pdf)
+- [Pad](https://yopad.eu/p/2022-02-06-365days-365days)
 
 ### Sesión 30 Cpp-review-dune 12/02/2022
 
@@ -114,8 +114,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-12.pdf)
-[Pad](https://yopad.eu/p/2022-02-12-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-12.pdf)
+- [Pad](https://yopad.eu/p/2022-02-12-dune-365days)
 
 ### Sesión 31 Cpp-review-dune 13/02/2022
 
@@ -125,8 +125,8 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-13.pdf)
-[Pad](https://yopad.eu/p/2022-02-13-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-13.pdf)
+- [Pad](https://yopad.eu/p/2022-02-13-dune-365days)
 
 ### Sesión 32 Cpp-review-dune 19/02/2022
 
@@ -136,7 +136,18 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-[Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-13.pdf)
-[Pad](https://yopad.eu/p/2022-02-19-dune-365days)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-13.pdf)
+- [Pad](https://yopad.eu/p/2022-02-19-dune-365days)
 
 ### Sesión 33 Cpp-review-dune 20/02/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/8SrgsctSguFxdhXe4QJy2L?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-20.pdf)
+- [Pad](https://yopad.eu/p/2022-02-20-365days)
+
+### Sesión 34 Cpp-review-dune 26/02/2022
