--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -151,3 +151,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-02-20-365days)
 
 ### Sesión 34 Cpp-review-dune 26/02/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/xrtq9XviUAtqFYg7CJGhy2?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-02-26.pdf)
+- [Pad](https://yopad.eu/p/2022-02-26-dune-365days)
+
+### Sesión 35 Cpp-review-dune 27/02/2022
