--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -173,3 +173,12 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-02-27-dune-365days)
 
 ### Sesión 36 Cpp-review-dune 05/03/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/qC2NLjanVAWeWoUYPDt4D5?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-03-05.pdf)
+- [Pad](https://yopad.eu/p/2022-02-05-dune-365days)
