--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -182,3 +182,16 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-03-05.pdf)
 - [Pad](https://yopad.eu/p/2022-02-05-dune-365days)
+
+### Sesión 37 Cpp-review-dune 06/03/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/ozBcnN4mawaygW6hUG7GVy?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-03-06.pdf)
+- [Pad](https://yopad.eu/p/2022-02-06-dune-365days)
+
+### Sesión 38 Cpp-review-dune 12/03/2022
