--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -195,3 +195,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-02-06-dune-365days)
 
 ### Sesión 38 Cpp-review-dune 12/03/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/uizCrwzRvWnEKKUNwGQXo4?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-03-12.pdf)
+- [Pad](https://yopad.eu/p/2022-03-12-dune-365days)
+
+### Sesión 39 Cpp-review-dune 13/03/2022
