--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -217,3 +217,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-03-13-dune-365days)
 
 ### Sesión 40 Cpp-review-dune 19/03/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/iMVArS9o15164AQWvL2oZf?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-03-19.pdf)
+- [Pad](https://yopad.eu/p/2022-03-19-dune-365days)
+
+### Sesión 41 Cpp-review-dune 20/03/2022
