Add no video yet

--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -228,3 +228,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-03-19-dune-365days)
 
 ### Sesión 41 Cpp-review-dune 20/03/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src=""
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-03-20.pdf)
+- [Pad](https://yopad.eu/p/2022-03-20-dune-365days)
+
+### Sesión 42 Cpp-review-dune 26/03/2022
