--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -231,7 +231,7 @@ sidebar: auto
 
 <iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
-  src=""
+  src="https://diode.zone/videos/embed/ki3EhKrGKWrZYfmD5W5dvK?title=0&warningTitle=0&peertubeLink=0"
   frameborder="0" allowfullscreen>
 </iframe>
 
