--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -239,3 +239,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-03-20-dune-365days)
 
 ### Sesión 42 Cpp-review-dune 26/03/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/8eq1n2YcdvFoEytYKbyVwe?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-03-26.pdf)
+- [Pad](https://yopad.eu/p/2022-03-26-dune-365days)
+
+### Sesión 43 Cpp-review-dune 27/03/2022
