--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -260,4 +260,15 @@ sidebar: auto
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-03-27.pdf)
 - [Pad](https://yopad.eu/p/2022-03-27-dune-365days)
 
-### Sesión 44 Cpp-review-dune 03/04/2022
+### Sesión 44 Cpp-review-dune 02/04/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/hmHHSxSgkGA7e6vhc6ii1D?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-04-02.pdf)
+- [Pad](https://yopad.eu/p/2022-04-02-dune-365days)
+
+### Sesión 45 Cpp-review-dune 03/04/2022
