--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -272,3 +272,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-04-02-dune-365days)
 
 ### Sesión 45 Cpp-review-dune 03/04/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/koy5VyCM49aBEicPKotBU3?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-04-03.pdf)
+- [Pad](https://yopad.eu/p/2022-04-03-dune-365days)
+
+### Sesión 46 Cpp-review-dune 09/04/2022
