--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -283,3 +283,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-04-03-dune-365days)
 
 ### Sesión 46 Cpp-review-dune 09/04/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/skYQdVRsRgwy5B1XCHUoTy?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-04-09.pdf)
+- [Pad](https://yopad.eu/p/2022-04-09-dune-365days)
+
+### Sesión 47 Cpp-review-dune 10/04/2022
