--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -305,3 +305,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-04-10-dune-365days)
 
 ### Sesión 48 Cpp-review-dune 16/04/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/6aG6j1rSpRVn5XpgF5nRab?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-04-16.pdf)
+- [Pad](https://yopad.eu/p/2022-04-16-dune-365days)
+
+### Sesión 49 Cpp-review-dune 17/04/2022
