--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -316,3 +316,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-04-16-dune-365days)
 
 ### Sesión 49 Cpp-review-dune 17/04/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/7uYRiQxSuM7BLb2UkKuqpQ?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-04-17.pdf)
+- [Pad](https://yopad.eu/p/2022-04-17-dune-365days)
+
+### Sesión 50 Cpp-review-dune 18/04/2022
