--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -327,3 +327,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-04-17-dune-365days)
 
 ### Sesión 50 Cpp-review-dune 18/04/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/icrKvdYtjb6mKSAFSFUiGc?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-04-18.pdf)
+- [Pad](https://yopad.eu/p/2022-04-18-dune-365days)
+
+### Sesión 51 Cpp-review-dune 24/04/2022
