--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -338,3 +338,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-04-18-dune-365days)
 
 ### Sesión 51 Cpp-review-dune 24/04/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/rsbVaMRZ1TM53CkZYzvMHo?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-04-24.pdf)
+- [Pad](https://yopad.eu/p/2022-04-24-dune-365days)
+
+### Sesión 52 Cpp-review-dune 25/04/2022
