--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -359,4 +359,15 @@ sidebar: auto
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-04-25.pdf)
 - [Pad](https://yopad.eu/p/2022-04-25-dune-365days)
 
-### Sesión 52 Cpp-review-dune 25/04/2022
+### Sesión 53 Cpp-review-dune 01/05/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/btArqj9ynM9GBCxaHiDppJ?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-05-01.pdf)
+- [Pad](https://yopad.eu/p/2022-05-01-dune-365days)
+
+### Sesión 54 Cpp-review-dune 02/05/2022
