--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -382,3 +382,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-05-02-dune-365days)
 
 ### Sesión 55 Cpp-review-dune 08/05/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/2AaiHtsx2UUJV9Zq8hoF3A?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-05-08.pdf)
+- [Pad](https://yopad.eu/p/2022-05-08-dune-365days)
+
+### Sesión 56 Cpp-review-dune 09/05/2022
