--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -393,3 +393,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-05-08-dune-365days)
 
 ### Sesión 56 Cpp-review-dune 09/05/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/3kpEXFz5CnFUx12KKgjd62?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-05-09.pdf)
+- [Pad](https://yopad.eu/p/2022-05-09-dune-365days)
+
+### Sesión 57 Cpp-review-dune 15/05/2022
