--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -404,3 +404,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-05-09-dune-365days)
 
 ### Sesión 57 Cpp-review-dune 15/05/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/ho2irhv2Xvh3eqsh1hHY2o?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-05-15.pdf)
+- [Pad](https://yopad.eu/p/2022-05-15-dune-365days)
+
+### Sesión 58 Cpp-review-dune 16/05/2022
