--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -426,3 +426,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-05-16-dune-365days)
 
 ### Sesión 59 Cpp-review-dune 22/05/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/uvTQtRQKCkCqGqgiih3BZq?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-05-22.pdf)
+- [Pad](https://yopad.eu/p/2022-05-22-dune-365days)
+
+### Sesión 60 Cpp-review-dune 23/05/2022
