--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -448,3 +448,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-05-23-dune-365days)
 
 ### Sesión 61 Cpp-review-dune 29/05/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/vp1Nr315B1AxvVU6NGodn9?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-05-29.pdf)
+- [Pad](https://yopad.eu/p/2022-05-29-dune-365days)
+
+### Sesión 62 Cpp-review-dune 30/05/2022
