--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -470,3 +470,23 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-05-30-dune-365days)
 
 ### Sesión 63 Cpp-review-dune 05/06/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/u9R9qipUxsas5XgHpXG3D3?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-06-05.pdf)
+- [Pad](https://yopad.eu/p/2022-06-05-dune-365days)
+
+### Sesión 64 Cpp-review-dune 06/06/2022
+
+<!-- <iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://diode.zone/videos/embed/u9R9qipUxsas5XgHpXG3D3?title=0&warningTitle=0&peertubeLink=0"
+  frameborder="0" allowfullscreen>
+</iframe> -->
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-06-06.pdf)
+- [Pad](https://yopad.eu/p/2022-06-06-dune-365days)
