--- a/docs/src/videos/zoom/2022.md
+++ b/docs/src/videos/zoom/2022.md
@@ -482,11 +482,13 @@ sidebar: auto
 
 ### Sesión 64 Cpp-review-dune 06/06/2022
 
-<!-- <iframe width="610" height="350"
+<iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
-  src="https://diode.zone/videos/embed/u9R9qipUxsas5XgHpXG3D3?title=0&warningTitle=0&peertubeLink=0"
+  src="https://diode.zone/videos/embed/bNDbddV7j2e5jVAAUTQjgp?title=0&warningTitle=0&peertubeLink=0"
   frameborder="0" allowfullscreen>
-</iframe> -->
+</iframe>
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-06-06.pdf)
 - [Pad](https://yopad.eu/p/2022-06-06-dune-365days)
+
+### Sesión 65 Cpp-review-dune 12/06/2022
