--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -56,6 +56,9 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-06-12.pdf)
+- [Pad](https://yopad.eu/p/2022-06-12-dune-365days)
+
 ### Sesión 66 Cpp-review-dune 17/06/2022
 
 <iframe width="610" height="350"
@@ -80,4 +83,18 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-06-26.pdf)
+- [Pad](https://yopad.eu/p/2022-06-26-dune-365days)
+
 ### Sesión 69 Cpp-review-dune 27/06/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/cANpEZGAY1k"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-06-27.pdf)
+- [Pad](https://yopad.eu/p/2022-06-27-dune-365days)
+
+### Sesión 70 Cpp-review-dune 03/07/2022
