--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -98,3 +98,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-06-27-dune-365days)
 
 ### Sesión 70 Cpp-review-dune 03/07/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/cANpEZGAY1k"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-03.pdf)
+- [Pad](https://yopad.eu/p/2022-07-03-dune-365days)
+
+### Sesión 71 Cpp-review-dune 04/07/2022
