--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -101,7 +101,7 @@ sidebar: auto
 
 <iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
-  src="https://www.youtube-nocookie.com/embed/cANpEZGAY1k"
+  src="https://www.youtube-nocookie.com/embed/Or6HlK17b1I"
   frameborder="0" allowfullscreen>
 </iframe>
 
