--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -109,3 +109,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-07-03-dune-365days)
 
 ### Sesión 71 Cpp-review-dune 04/07/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/CYKdeID5svg"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-04.pdf)
+- [Pad](https://yopad.eu/p/2022-07-04-dune-365days)
+
+### Sesión 72 Cpp-review-dune 10/07/2022
