--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -120,3 +120,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-07-04-dune-365days)
 
 ### Sesión 72 Cpp-review-dune 10/07/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/Fe9OOmZXXuY"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-10.pdf)
+- [Pad](https://yopad.eu/p/2022-07-10-dune-365days)
+
+### Sesión 73 Cpp-review-dune 11/07/2022
