--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -130,4 +130,15 @@ sidebar: auto
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-10.pdf)
 - [Pad](https://yopad.eu/p/2022-07-10-dune-365days)
 
-### Sesión 73 Cpp-review-dune 11/07/2022
+### Sesión 73 Cpp-review-dune 17/07/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/vALnhyXiheU"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-17.pdf)
+- [Pad](https://yopad.eu/p/2022-07-17-dune-365days)
+
+### Sesión 74 Cpp-review-dune 18/07/2022
