--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -142,3 +142,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-07-17-dune-365days)
 
 ### Sesión 74 Cpp-review-dune 18/07/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/ddq7j5o92k4"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-18.pdf)
+- [Pad](https://yopad.eu/p/2022-07-18-dune-365days)
+
+### Sesión 75 Cpp-review-dune 24/07/2022
