--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -153,3 +153,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-07-18-dune-365days)
 
 ### Sesión 75 Cpp-review-dune 24/07/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/89CKIiwUbOY"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-24.pdf)
+- [Pad](https://yopad.eu/p/2022-07-24-dune-365days)
+
+### Sesión 76 Cpp-review-dune 25/07/2022
