--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -164,3 +164,25 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-07-24-dune-365days)
 
 ### Sesión 76 Cpp-review-dune 25/07/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/YorKrjXvEes"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-25.pdf)
+- [Pad](https://yopad.eu/p/2022-07-25-dune-365days)
+
+### Sesión 77 Cpp-review-dune 27/07/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/ABfOw5bzNfM"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-27.pdf)
+- [Pad](https://yopad.eu/p/2022-07-27-dune-365days)
+
+### Sesión 78 Cpp-review-dune 28/07/2022
