--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -186,3 +186,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-07-27-dune-365days)
 
 ### Sesión 78 Cpp-review-dune 28/07/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/veDXvEcK1Ks"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-28.pdf)
+- [Pad](https://yopad.eu/p/2022-07-28-dune-365days)
+
+### Sesión 79 Cpp-review-dune 29/07/2022
