--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -196,4 +196,13 @@ sidebar: auto
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-07-28.pdf)
 - [Pad](https://yopad.eu/p/2022-07-28-dune-365days)
 
-### Sesión 79 Cpp-review-dune 29/07/2022
+### Sesión 79 Cpp-review-dune 01/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/8SS4VU7qUDU"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-01.pdf)
+- [Pad](https://yopad.eu/p/2022-08-01-dune-365days)
