--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -206,3 +206,16 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-01.pdf)
 - [Pad](https://yopad.eu/p/2022-08-01-dune-365days)
+
+### Sesión 80 Cpp-review-dune 02/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/HaQL5EqZI_Y"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-02.pdf)
+- [Pad](https://yopad.eu/p/2022-08-02-dune-365days)
+
+### Sesión 81 Cpp-review-dune 04/08/2022
