--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -219,3 +219,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-08-02-dune-365days)
 
 ### Sesión 81 Cpp-review-dune 04/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/hesGtE6rnyU"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-04.pdf)
+- [Pad](https://yopad.eu/p/2022-08-04-dune-365days)
+
+### Sesión 82 Cpp-review-dune 05/08/2022
