--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -229,4 +229,15 @@ sidebar: auto
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-04.pdf)
 - [Pad](https://yopad.eu/p/2022-08-04-dune-365days)
 
-### Sesión 82 Cpp-review-dune 05/08/2022
+### Sesión 82 Cpp-review-dune 07/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/gc3P2PJ6hx4"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-07.pdf)
+- [Pad](https://yopad.eu/p/2022-08-07-dune-365days)
+
+### Sesión 83 Cpp-review-dune 08/08/2022
