--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -241,3 +241,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-08-07-dune-365days)
 
 ### Sesión 83 Cpp-review-dune 08/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/pjRFlIes584"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-08.pdf)
+- [Pad](https://yopad.eu/p/2022-08-08-dune-365days)
+
+### Sesión 84 Cpp-review-dune 09/08/2022
