--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -251,4 +251,15 @@ sidebar: auto
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-08.pdf)
 - [Pad](https://yopad.eu/p/2022-08-08-dune-365days)
 
-### Sesión 84 Cpp-review-dune 09/08/2022
+### Sesión 84 Cpp-review-dune 10/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/gkOAs6wx05g"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-10.pdf)
+- [Pad](https://yopad.eu/p/2022-08-10-dune-365days)
+
+### Sesión 85 Cpp-review-dune 14/08/2022
