--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -263,3 +263,12 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-08-10-dune-365days)
 
 ### Sesión 85 Cpp-review-dune 14/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/OYrknpxQtKo"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-14.pdf)
+- [Pad](https://yopad.eu/p/2022-08-14-dune-365days)
