--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -272,3 +272,16 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-14.pdf)
 - [Pad](https://yopad.eu/p/2022-08-14-dune-365days)
+
+### Sesión 86 Cpp-review-dune 15/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/Lbs7XQrjrNE"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-15.pdf)
+- [Pad](https://yopad.eu/p/2022-08-15-dune-365days)
+
+### Sesión 87 Cpp-review-dune 16/08/2022
