--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -294,3 +294,16 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-16.pdf)
 - [Pad](https://yopad.eu/p/2022-08-16-dune-365days)
+
+### Sesión 88 Cpp-review-dune 21/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/-QKUnV7NPA4"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-21.pdf)
+- [Pad](https://yopad.eu/p/2022-08-21-dune-365days)
+
+### Sesión 89 Cpp-review-dune 22/08/2022
