--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -307,3 +307,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-08-21-dune-365days)
 
 ### Sesión 89 Cpp-review-dune 22/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/qg68a9d49_8"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-22.pdf)
+- [Pad](https://yopad.eu/p/2022-08-22-dune-365days)
+
+### Sesión 90 Cpp-review-dune 23/08/2022
