--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -338,3 +338,16 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-28.pdf)
 - [Pad](https://yopad.eu/p/2022-08-28-dune-365days)
+
+### Sesión 91 Cpp-review-dune 31/08/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/zRuEWH7ABgU"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-08-31.pdf)
+- [Pad](https://yopad.eu/p/2022-08-31-dune-365days)
+
+### Sesión 92 Cpp-review-dune 04/09/2022
