--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -351,3 +351,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-08-31-dune-365days)
 
 ### Sesión 92 Cpp-review-dune 04/09/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/Z50vu5_BKIU"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-09-04.pdf)
+- [Pad](https://yopad.eu/p/2022-09-04-dune-365days)
+
+### Sesión 93 Cpp-review-dune 05/09/2022
