--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -362,3 +362,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-09-04-dune-365days)
 
 ### Sesión 93 Cpp-review-dune 05/09/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/JTIEai7Dt5A"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-09-05.pdf)
+- [Pad](https://yopad.eu/p/2022-09-05-dune-365days)
+
+### Sesión 94 Cpp-review-dune 11/09/2022
