--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -384,3 +384,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-09-06-dune-365days)
 
 ### Sesión 95 Cpp-review-dune 11/09/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/qBToBZEk7Iw"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-09-11.pdf)
+- [Pad](https://yopad.eu/p/2022-09-11-dune-365days)
+
+### Sesión 96 Cpp-review-dune 12/09/2022
