--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -395,3 +395,12 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-09-11-dune-365days)
 
 ### Sesión 96 Cpp-review-dune 12/09/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/6ARQ4mo6_iA"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-09-12.pdf)
+- [Pad](https://yopad.eu/p/2022-09-12-dune-365days)
