--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -404,3 +404,16 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-09-12.pdf)
 - [Pad](https://yopad.eu/p/2022-09-12-dune-365days)
+
+### Sesión 97 Cpp-review-dune 13/09/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/rcU_KA4bDvQ"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-09-13.pdf)
+- [Pad](https://yopad.eu/p/2022-09-13-dune-365days)
+
+### Sesión 98 Cpp-review-dune 18/09/2022
