--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -416,4 +416,15 @@ sidebar: auto
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-09-13.pdf)
 - [Pad](https://yopad.eu/p/2022-09-13-dune-365days)
 
-### Sesión 98 Cpp-review-dune 18/09/2022
+### Sesión 98 Cpp-review-dune 02/10/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/WqHzjU7sKyY"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-10-02.pdf)
+- [Pad](https://yopad.eu/p/2022-10-02-dune-365days)
+
+### Sesión 99 Cpp-review-dune 09/10/2022
