--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -428,3 +428,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-10-02-dune-365days)
 
 ### Sesión 99 Cpp-review-dune 09/10/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/tYkgOp2rWmI"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-10-09.pdf)
+- [Pad](https://yopad.eu/p/2022-10-09-dune-365days)
+
+### Sesión 100 Cpp-review-dune 16/10/2022
