--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -439,3 +439,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-10-09-dune-365days)
 
 ### Sesión 100 Cpp-review-dune 16/10/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/--CDS49kKxA"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-10-16.pdf)
+- [Pad](https://yopad.eu/p/2022-10-16-dune-365days)
+
+### Sesión 101 Cpp-review-dune 23/10/2022
