--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -461,3 +461,12 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2022-10-23-dune-365days)
 
 ### Sesión 102 Cpp-review-dune 30/10/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/3FbO14LnpQg"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-10-30.pdf)
+- [Pad](https://yopad.eu/p/2022-10-30-dune-365days)
