--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -470,3 +470,14 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-10-30.pdf)
 - [Pad](https://yopad.eu/p/2022-10-30-dune-365days)
+
+### Sesión 103 Cpp-review-dune 04/12/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/Hhdr25nkSGE"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-12-04.pdf)
+- [Pad](https://yopad.eu/p/2022-12-04-dune-365days)
