--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -481,3 +481,14 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-12-04.pdf)
 - [Pad](https://yopad.eu/p/2022-12-04-dune-365days)
+
+### Sesión 104 Cpp-review-dune 11/12/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/M8PLfcRjGsE"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-12-11.pdf)
+- [Pad](https://yopad.eu/p/2022-12-11-dune-365days)
