--- a/docs/src/videos/zoom/youtube/2022.md
+++ b/docs/src/videos/zoom/youtube/2022.md
@@ -492,3 +492,14 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-12-11.pdf)
 - [Pad](https://yopad.eu/p/2022-12-11-dune-365days)
+
+### Sesión 105 Cpp-review-dune 18/12/2022
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/dnLYJeSgn-s"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-12-18.pdf)
+- [Pad](https://yopad.eu/p/2022-12-18-dune-365days)
