--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -6,11 +6,13 @@ sidebar: auto
 
 ### Sesión 106 Cpp-review-dune 08/01/2023
 
-<!-- <iframe width="610" height="350"
+<iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
-  src="https://www.youtube-nocookie.com/embed/FGDi2D841y4"
+  src="https://www.youtube-nocookie.com/embed/rx99nNqjbXU"
   frameborder="0" allowfullscreen>
 </iframe>
 
-- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2022-05-29.pdf)
-- [Pad](https://yopad.eu/p/2022-05-29-dune-365days) -->
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-01-08.pdf)
+- [Pad](https://yopad.eu/p/2023-01-08-dune-365days)
+
+### Sesión 107 Cpp-review-dune 15/01/2023
