--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -16,3 +16,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2023-01-08-dune-365days)
 
 ### Sesión 107 Cpp-review-dune 15/01/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/nF2K-lt_tqs"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-01-15.pdf)
+- [Pad](https://yopad.eu/p/2023-01-15-dune-365days)
+
+### Sesión 108 Cpp-review-dune 22/01/2023
