--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -28,8 +28,19 @@ sidebar: auto
 
 ### Sesión 108 Cpp-review-dune 22/01/2023
 
-<!-- <iframe width="610" height="350"
+<iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
   src="https://www.youtube-nocookie.com/embed/nF2K-lt_tqs"
   frameborder="0" allowfullscreen>
-</iframe> -->
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-01-22.pdf)
+- [Pad](https://yopad.eu/p/2023-01-22-dune-365days)
+
+### Sesión 109 Cpp-review-dune 29/01/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/h5dN2JqEZEw"
+  frameborder="0" allowfullscreen>
+</iframe>
