--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -30,7 +30,7 @@ sidebar: auto
 
 <iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
-  src="https://www.youtube-nocookie.com/embed/nF2K-lt_tqs"
+  src="https://www.youtube-nocookie.com/embed/h5dN2JqEZEw"
   frameborder="0" allowfullscreen>
 </iframe>
 
@@ -39,8 +39,8 @@ sidebar: auto
 
 ### Sesión 109 Cpp-review-dune 29/01/2023
 
-<iframe width="610" height="350"
+<!-- <iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
   src="https://www.youtube-nocookie.com/embed/h5dN2JqEZEw"
   frameborder="0" allowfullscreen>
-</iframe>
+</iframe> -->
