--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -44,3 +44,6 @@ sidebar: auto
   src="https://www.youtube-nocookie.com/embed/h5dN2JqEZEw"
   frameborder="0" allowfullscreen>
 </iframe> -->
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-01-29.pdf)
+- [Pad](https://yopad.eu/p/2023-01-29-dune-365days)
