--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -39,11 +39,13 @@ sidebar: auto
 
 ### Sesión 109 Cpp-review-dune 29/01/2023
 
-<!-- <iframe width="610" height="350"
+<iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
-  src="https://www.youtube-nocookie.com/embed/h5dN2JqEZEw"
+  src="https://www.youtube-nocookie.com/embed/ThXgaBYFB3E"
   frameborder="0" allowfullscreen>
-</iframe> -->
+</iframe>
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-01-29.pdf)
 - [Pad](https://yopad.eu/p/2023-01-29-dune-365days)
+
+### Sesión 110 Cpp-review-dune 05/02/2023
