--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -50,11 +50,11 @@ sidebar: auto
 
 ### Sesión 110 Cpp-review-dune 05/02/2023
 
-<!-- <iframe width="610" height="350"
+<iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
-  src="https://www.youtube-nocookie.com/embed/ThXgaBYFB3E"
+  src="https://www.youtube-nocookie.com/embed/vLYD6t8k_X8"
   frameborder="0" allowfullscreen>
-</iframe> -->
+</iframe>
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-02-05.pdf)
 - [Pad](https://yopad.eu/p/2023-02-05-dune-365days)
