--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -60,3 +60,12 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2023-02-05-dune-365days)
 
 ### Sesión 111 Cpp-review-dune 12/02/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/edRKOMKnu_s"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-02-12.pdf)
+- [Pad](https://yopad.eu/p/2023-02-12-dune-365days)
