--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -69,3 +69,16 @@ sidebar: auto
 
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-02-12.pdf)
 - [Pad](https://yopad.eu/p/2023-02-12-dune-365days)
+
+### Sesión 112 Cpp-review-dune 19/02/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/brAcDwQpKdI"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-02-19.pdf)
+- [Pad](https://yopad.eu/p/2023-02-19-dune-365days)
+
+### Sesión 113 Cpp-review-dune 21/02/2023
