--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -111,4 +111,15 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-### Sesión 116 Cpp-review-dune 19/03/2023
+### Sesión 116 Cpp-review-dune 26/03/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-03-26.pdf)
+- [Pad](https://yopad.eu/p/2023-03-26-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/fNqPv4C9SoQ"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 117 Cpp-review-dune 02/04/2023
