--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -123,3 +123,14 @@ sidebar: auto
 </iframe>
 
 ### Sesión 117 Cpp-review-dune 02/04/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-04-02.pdf)
+- [Pad](https://yopad.eu/p/2023-04-02-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/fI41_bBroBQ"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 118 Cpp-review-dune 09/04/2023
