--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -133,4 +133,12 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-### Sesión 118 Cpp-review-dune 09/04/2023
+### Sesión 118 Cpp-review-dune 06/04/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/TjWSA5A171s"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 119 Cpp-review-dune 09/04/2023
