--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -142,3 +142,14 @@ sidebar: auto
 </iframe>
 
 ### Sesión 119 Cpp-review-dune 09/04/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-04-09.pdf)
+- [Pad](https://yopad.eu/p/2023-04-09-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/KZrDf0_t-Ag"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 120 Cpp-review-dune 16/04/2023
