--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -164,3 +164,14 @@ sidebar: auto
 </iframe>
 
 ### Sesión 121 Cpp-review-dune 23/04/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-04-23.pdf)
+- [Pad](https://yopad.eu/p/2023-04-23-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/cTfY67-C41U"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 122 Cpp-review-dune 30/04/2023
