--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -175,3 +175,14 @@ sidebar: auto
 </iframe>
 
 ### Sesión 122 Cpp-review-dune 30/04/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-04-30.pdf)
+- [Pad](https://yopad.eu/p/2023-04-30-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/FwS9PQullyI"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 123 Cpp-review-dune 07/05/2023
