--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -186,3 +186,14 @@ sidebar: auto
 </iframe>
 
 ### Sesión 123 Cpp-review-dune 07/05/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-05-07.pdf)
+- [Pad](https://yopad.eu/p/2023-05-07-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/0TOJVtZHTLM"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 124 Cpp-review-dune 14/05/2023
