--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -197,3 +197,8 @@ sidebar: auto
 </iframe>
 
 ### Sesión 124 Cpp-review-dune 14/05/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-05-14.pdf)
+- [Pad](https://yopad.eu/p/2023-05-14-dune-365days)
+
+### Sesión 125 Cpp-review-dune 21/05/2023
