--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -225,7 +225,16 @@ sidebar: auto
 
 ### Sesión 127 Cpp-review-dune 18/06/2023
 
-- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-05-28.pdf)
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-06-18.pdf)
 - [Pad](https://yopad.eu/p/2023-06-18-dune-365days)
 
 ### Sesión 128 Cpp-review-dune 25/06/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-06-25.pdf)
+- [Pad](https://yopad.eu/p/2023-06-25-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/0Rqg5y-eP0g"
+  frameborder="0" allowfullscreen>
+</iframe>
