--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -238,3 +238,16 @@ sidebar: auto
   src="https://www.youtube-nocookie.com/embed/0Rqg5y-eP0g"
   frameborder="0" allowfullscreen>
 </iframe>
+
+### Sesión 129 Cpp-review-dune 02/07/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-07-02.pdf)
+- [Pad](https://yopad.eu/p/2023-07-02-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/DgOicv2d5A4"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 130 Cpp-review-dune 09/07/2023
