--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -262,3 +262,14 @@ sidebar: auto
 </iframe>
 
 ### Sesión 131 Cpp-review-dune 16/07/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-07-16.pdf)
+- [Pad](https://yopad.eu/p/2023-07-16-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/TVU9KrXTtpA"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 132 Cpp-review-dune 23/07/2023
