--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -273,3 +273,14 @@ sidebar: auto
 </iframe>
 
 ### Sesión 132 Cpp-review-dune 23/07/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-07-23.pdf)
+- [Pad](https://yopad.eu/p/2023-07-23-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/828LD11BdHg"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 133 Cpp-review-dune 27/07/2023
