--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -283,4 +283,15 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-### Sesión 133 Cpp-review-dune 27/07/2023
+### Sesión 133 Cpp-review-dune 30/07/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-07-30.pdf)
+- [Pad](https://yopad.eu/p/Dune-meeting-30-07-2023-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/z41ZV0saLfk"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 134 Cpp-review-dune 31/07/2023
