--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -294,4 +294,58 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-### Sesión 134 Cpp-review-dune 31/07/2023
+### Sesión 134 Cpp-review-dune 13/08/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/OKfcdkU76zI"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 135 Cpp-review-dune 20/08/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/FTkxWD-eetw"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 136 Cpp-review-dune 27/08/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/G3FfvspZcoE"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 137 Cpp-review-dune 03/09/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/JZdPwR8H3YI"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 138 Cpp-review-dune 10/09/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/y9MLcFYp9mU"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 139 Cpp-review-dune 17/09/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/mSFBRs5IdgQ"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 140 Cpp-review-dune 24/09/2023
+
+<!-- <iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/mSFBRs5IdgQ"
+  frameborder="0" allowfullscreen>
+</iframe> -->
