--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -413,5 +413,26 @@ sidebar: auto
 - [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-11-26.pdf)
 - [Pad](https://yopad.eu/p/2023-10-12-365days)
 
+### Sesión 148 Cpp-review-dune 26/12/2023
 
-<!-- ### Sesión 148 Cpp-review-dune 17/12/2023 -->
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/LMyD_ANbnO4"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 149 Cpp-review-dune 30/12/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/3srUm9Q0-vk"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 149 Cpp-review-dune 31/12/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/VErwh_f2K34"
+  frameborder="0" allowfullscreen>
+</iframe>
