--- a/docs/src/videos/zoom/youtube/2024.md
+++ b/docs/src/videos/zoom/youtube/2024.md
@@ -4,4 +4,53 @@ sidebar: auto
 
 # Sesiones en Zoom durante el 2024
 
-### Sesión 150 Cpp-review-dune 07/01/2024
+### Sesión 151 Cpp-review-dune 14/01/2024
+
+### Sesión 152 Cpp-review-dune 21/01/2024
+
+### Sesión 153 Cpp-review-dune 28/01/2024
+
+### Sesión 154 Cpp-review-dune 28/01/2024
+
+### Sesión 155 Cpp-review-dune 04/02/2024
+
+### Sesión 156 Cpp-review-dune 11/02/2024
+
+### Sesión 157 Cpp-review-dune 25/02/2024
+
+### Sesión 158 Cpp-review-dune 03/03/2024
+
+### Sesión 159 Cpp-review-dune 10/03/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/ak093OqOOO4"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-11-26.pdf)
+- [Pad](https://yopad.eu/p/Dune-meeting-10-03-24-365days)
+
+### Sesión 160 Cpp-review-dune 17/03/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/IVhIDNtkFos"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-11-26.pdf)
+- [Pad](https://yopad.eu/p/2024-03-17-365days)
+
+### Sesión 161 Cpp-review-dune 24/03/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/j7m8FfwqG4o"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-11-26.pdf)
+- [Pad](https://yopad.eu/p/2024-03-24-365days)
+
+### Sesión 162 Cpp-review-dune 30/03/2023
